# hexagon-tactics

./: .gitignore  Cargo.toml  README.md
docs/: battlefield.md  bla.md  combat.md  metagame.md  mvp_roguelite.md  random_ideas.md
docs/feature_creep_ideas/: kingdom_building_metagame.md
docs/high_concept/: elevator_pitch.md  look_and_feel.md  market_analysis.md
docs/units/: classes.md  equipment.md  reactions.md  skills.md  stats.md
game-client/: Cargo.toml
game-client/src/: main.rs  networking.rs
game-client/src/debugging/: world_inspector.rs
game-server/: Cargo.toml
game-server/src/: main.rs
game_client/: Cargo.toml
game_client/src/: camera.rs  combat_data_resource.rs  game_data_resource.rs  load.rs  main.rs  main_menu.rs  networking.rs
game_client/src/combat/: combat_input.rs  combat_plugin.rs  combat_ui.rs  end_turn.rs  local_combat_data.rs  mod.rs  unit_actions.rs  unit_animations.rs  unit_placement.rs
game_client/src/debugging/: mod.rs  world_inspector.rs
game_client/src/game/: choose_between_units.rs  game_plugin.rs  mod.rs  sprite_builder.rs  ui_utils.rs
game_client/src/game/combat/: combat_plugin.rs  combat_ui.rs  end_turn.rs  leave_combat.rs  local_combat_data.rs  mod.rs  unit_actions.rs  unit_actions_highlights.rs  unit_animations.rs  unit_placement.rs
game_client/src/game_map/: map_gizmos.rs  map_ui.rs  mod.rs  tile_cursor.rs
game_client/src/game_map/editor/: editor_ui.rs  mod.rs
game_client/src/game_map/map_editor/: editor_ui.rs  mod.rs
game_client/src/main_menu/: mod.rs
game_client/src/map/: highlighted_tiles.rs  map_gizmos.rs  map_plugin.rs  map_ui.rs  map_utils.rs  mod.rs  spawning.rs  tile_cursor.rs  update_tile.rs
game_client/src/map/highlights/: active_unit_highlights.rs  attack_highlights.rs  cursor_highlights.rs  highlight_plugin.rs  mod.rs  path_highlights.rs  plugin.rs  range_highlights.rs
game_client/src/map_editor/: editor_ui.rs  map_editor_action.rs  map_editor_plugin.rs  map_editor_tool.rs  mod.rs  multiselect_data.rs
game_client/src/map_editor/tools/: mod.rs  spawn_marker.rs
game_client/src/networking/: incoming_message_processor.rs  internal_event_handlers.rs  mod.rs  network.rs  network_plugin.rs
game_common/: Cargo.toml
game_common/src/: combat_data.rs  combat_turn.rs  combat_unit.rs  game_map.rs  game_state.rs  lib.rs  network_command.rs  network_helpers.rs  network_message.rs  player.rs  player_resources.rs  skill.rs  turn_resources.rs  unit.rs  unit_stats.rs  units.rs  validation_error.rs
game_common/src/game_data/: base_stats.rs  class.rs  equipment.rs  level.rs  mod.rs  monster.rs  prop.rs  race.rs  skill.rs  unit_definition.rs
game_common/src/game_map/: field_of_movement_with_edge_detection.rs  fluid.rs  fluid_kind.rs  game_map.rs  mod.rs  tile_data.rs  tile_surface.rs  versioned_map_data.rs
game_common/src/network_events/: client_to_server.rs  mod.rs  server_to_client.rs
game_common/src/validation/: mod.rs  validate_path.rs  validate_player_readiness.rs  validate_skill_target_is_in_range.rs  validate_turn_order.rs  validate_unit_can_be_placed_on_tile.rs  validate_unit_has_at_least_one_action.rs  validate_unit_has_enough_resources_to_use_skill.rs  validate_unit_knows_skill.rs  validate_unit_ownership.rs  validation_error.rs
game_server/: Cargo.toml
game_server/src/: connection_handler.rs  in_game_data.rs  in_game_state.rs  main.rs  message_processor.rs  server_state.rs  shared_state.rs  state.rs
game_server/src/in_game/: command_invocation_result.rs  in_game_data.rs  mod.rs  state_transitions.rs
game_server/src/in_game/states/: combat_finished.rs  mod.rs  pick_unit.rs  waiting_for_others.rs
game_server/src/in_game/states/combat/: end_turn.rs  finish_loading.rs  mod.rs  move_unit.rs  on_combat_end.rs  place_unit.rs  use_skill.rs
game_server/src/lobby/: mod.rs  start_game.rs
game_server/src/message_processor/: combat_finished.rs  command_invocation_result.rs  end_turn.rs  finish_loading.rs  mod.rs  move_unit.rs  pick_unit.rs  place_unit.rs  start_game.rs  state_transitions.rs  use_skill.rs
game_server/src/message_processor/combat/: end_turn.rs  finish_loading.rs  mod.rs  move_unit.rs  place_unit.rs  use_skill.rs
game_server/src/message_processor/lobby/: mod.rs  start_game.rs
game_server/src/message_processor/states/: combat_finished.rs  mod.rs  pick_unit.rs
game_server/src/message_processor/states/combat/: end_turn.rs  finish_loading.rs  mod.rs  move_unit.rs  place_unit.rs  use_skill.rs
game_server/src/message_processor/validation/: mod.rs  validate_player_readiness.rs  validate_turn_order.rs  validate_unit_ownership.rs  validation_error.rs
src/: main.rs
src/debugging/: mod.rs
