[workspace]
resolver = "2"
members = ["game_common", "game_client", "game_server"]

[workspace.package]
homepage = "https://github.com/Jacudibu/hexagon-tactics"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
