[workspace]
resolver = "2"
members = ["game_common", "game_client", "game_server"]

[workspace.package]
homepage = "https://github.com/Jacudibu/hexagon-tactics"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = { version = "0.13.2", default-features = false, features = [] }
bytes = "1.6.0"
enum-as-inner = "0.6.0"
futures = "0.3.30"
hexx = { version = "0.17.0", features = ["serde"] }
wtransport = "0.1.12"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
