[package]
name = "game-server"
homepage.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
game-common = { path = "../game-common" }
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
