[package]
name = "game-client"
homepage.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
game-common = { path = "../game_common" }
bevy = { version = "0.13.1", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    "webgl2",
] }
bevy_asset_loader = { version = "0.20.0", features = ["2d", "3d"] }
bevy_basic_camera = { git = "https://github.com/DGriffin91/bevy_basic_camera" }
bevy_egui = "0.26.0"
bevy-inspector-egui = "0.23.4"
bevy_kira_audio = "0.19.0"
bevy_screen_diagnostics = "0.5.0"
bevy_mod_raycast = "0.17.0"
leafwing-input-manager = "0.13.3"
rand = "0.8.5"
hexx = { version = "0.16.1", features = ["serde"] }

futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
