[package]
name = "game-client"
homepage.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
game-common = { path = "../game_common", features = ["ecs"] }
bevy = { workspace = true, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    "webgl2",
] }
bevy_asset_loader = { version = "0.20.1", features = ["2d", "3d"] }
bevy_egui = "0.27.0"
bevy-inspector-egui = "0.24.0"
bevy_kira_audio = "0.19.0"
bevy_screen_diagnostics = "0.5.0"
bevy_mod_raycast = "0.17.0"
bevy_sprite3d = "2.8.0"
leafwing-input-manager = "0.13.3"
rand = "0.8.5"

wtransport = { workspace = true, features = ["dangerous-configuration"] }

hexx.workspace = true
bytes.workspace = true
futures.workspace = true
tokio.workspace = true

[dev-dependencies]
game-common = { path = "../game_common", features = ["test_helpers"] }
