[package]
name = "game-common"
homepage.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { version = "0.13.2", features = [] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bytes = "1.6.0"
hexx = { version = "0.16.1", features = ["serde"] }
ron = "0.8.1"
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10.1"
pretty_assertions = "1.4.0"
