[package]
name = "game-common"
homepage.workspace = true
version.workspace = true
edition.workspace = true

[features]
test_helpers = []

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
ron = "0.8.1"
serde = { version = "1.0.197", features = ["derive"] }

bevy.workspace = true
bytes.workspace = true
hexx.workspace = true

[dev-dependencies]
tempfile = "3.10.1"
assertables = "7.0.1"
