[package]
name = "game-common"
homepage.workspace = true
version.workspace = true
edition.workspace = true

[features]
ecs = []
test_helpers = []

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
ron = "0.8.1"

bevy.workspace = true
bytes.workspace = true
enum-as-inner.workspace = true
serde.workspace = true
hexx.workspace = true

[dev-dependencies]
tempfile = "3.10.1"
assertables = "7.0.1"
