[package]
name = "game-server"
homepage.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
game-common = { path = "../game_common" }

bytes = "1.6.0"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wtransport = "0.1.12"
