[package]
name = "game-server"
homepage.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
game-common = { path = "../game_common" }

hashbrown = "0.14" # Same version as bevy_utils re-exports
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

bytes.workspace = true
futures.workspace = true
tokio.workspace = true
wtransport.workspace = true
hexx.workspace = true

[dev-dependencies]
game-common = { path = "../game_common", features = ["test_helpers"] }
enum-as-inner.workspace = true
